Not showing Site settings button for Guest mode

In Guest mode, Site Settings link found in the Page info bubble, leads to
chrome://settings/, not to the site content settings, as the content settings
are not visible.

Changes:
-Removed the Site Settings button from guest mode.

Note: Enabling just the Site Settings would require a complicated refactoring
of privacy section.

Bug: 823703
Change-Id: Ie3f6ecb3c7b11eeb7652808eefb8608222525830
Reviewed-on: https://chromium-review.googlesource.com/1185097
Commit-Queue: Kamila Hasanbega <hkamila@google.com>
Reviewed-by: Christian Dullweber <dullweber@chromium.org>
Reviewed-by: Jochen Eisinger <jochen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585773}
Former-commit-id: f55d1c53e1c17e61ff00974cd2d63484d3de45fa